--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ windows = { version = "0.48.0", features = ["Win32_Foundation",
     "Win32_Graphics_Gdi",
     "Win32_System_LibraryLoader",
     "Win32_UI_WindowsAndMessaging",
+    "Win32_UI_Input_KeyboardAndMouse",
 ] }
