--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,14 @@ edition = "2021"
 [[bin]]
 name = "screen-show"
 path = "src/main.rs"
-subsystem = "windows"
 [dependencies]
 windows = { version = "0.48.0", features = ["Win32_Foundation",
     "Win32_Graphics_Gdi",
     "Win32_System_LibraryLoader",
     "Win32_UI_WindowsAndMessaging",
     "Win32_UI_Input_KeyboardAndMouse",
+    "Win32_UI_Shell",
+    "Win32_Foundation",
+    "Win32_UI_Controls",
+    "Win32_Devices_DeviceAndDriverInstallation"
 ] }
